[css-grid] Static position should use content-box, not padding-box

This is a recent change by the CSSWG:
https://github.com/w3c/csswg-drafts/issues/3020

The spec text (https://drafts.csswg.org/css-grid/#static-position):
  "The static position of an absolutely-positioned child
   of a grid container is determined as if it were the sole grid item
   in a grid area whose edges coincide with the content edges
   of the grid container."

The patch is just a simple change in
LayoutGrid::PrepareChildForPositionedLayout() to use border and padding.

BUG=884956
TEST=external/wpt/css/css-grid/abspos/absolute-positioning-grid-container-parent-001.html

Change-Id: I01a77dfe41abcfac00c6d45f517c6d216aaa8ff7
Reviewed-on: https://chromium-review.googlesource.com/1229893
Commit-Queue: Manuel Rego <rego@igalia.com>
Reviewed-by: Javier Fernandez <jfernandez@igalia.com>
Cr-Commit-Position: refs/heads/master@{#592010}
Former-commit-id: 057aefb24ac215df9b93c4307f22e69882355e81